--- a/src/styles/modules/defaults.scss
+++ b/src/styles/modules/defaults.scss
@@ -52,7 +52,7 @@ html {
 }
 
 body {
-    background-color: #FAFAFF;
+    background-color: #FFFFFF;
     color: $base-font-color;
     font-weight: $regular-font;
     font-family: $base-font-family !important;
