--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -1,5 +1,18 @@
 .footer_primary {
-    
+    .dropdown-menu {
+        @media only screen and (max-width: 991px) {
+            display: none;
+
+            &.active {
+                display: block;
+                background-color: #F2F4FE;
+                padding: 10px 15px;
+                border-radius: 3px;
+                box-shadow: 0 1px 2px rgba(0, 0, 0, 0.13);
+            }
+        }
+    }
+
 }
 
 .footer_wrapper {
@@ -11,7 +24,8 @@
     @media only screen and (max-width: 1199px) {
         padding-bottom: 4rem;
     }
-   @media only screen and (max-width: 991px){
+
+    @media only screen and (max-width: 991px) {
         flex-wrap: wrap;
     }
 
@@ -19,11 +33,6 @@
         padding-bottom: 3rem;
     }
 
-    @media only screen and (max-width: 575px) {
-        padding-bottom: 2rem;
-    }
-
-   
 }
 
 .footer_linksWrapper {
@@ -31,9 +40,9 @@
 
     @media only screen and (max-width: 767px) {
         flex: inherit;
-        max-width: 50%;
+        max-width: 100%;
         width: 100%;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
     @media only screen and (max-width: 575px) {
@@ -53,18 +62,13 @@
         color: $brand-blue;
     }
 
-   @media only screen and (max-width: 991px){
+    @media only screen and (max-width: 991px) {
         letter-spacing: 0px;
         margin: 10px 0;
     }
 
     @media only screen and (max-width: 767px) {
         margin: 8px 0;
-    }
-
-    @media only screen and (max-width: 575px) {
-        font-size: 12px;
-        margin: 5px 0;
     }
 }
 
@@ -83,16 +87,49 @@ ul {
     letter-spacing: $no-letter-spacing;
     min-height: 33px;
     margin-bottom: 20px;
+    position: relative;
 
-   @media only screen and (max-width: 991px){
+    @media only screen and (max-width: 991px) {
         font-size: 13px;
         margin-bottom: 0px;
         letter-spacing: 0.02em;
+        cursor: pointer;
+    }
+
+    @media only screen and (max-width: 767px) {
+
+        &:after {
+            position: absolute;
+            top: 50%;
+            // background-image: url(../images/svg/Arrow/downarrowblack.svg);
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+            right: 8px;
+            content: '';
+            width: 14px;
+            height: 10px;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            transition: all 0.25s;
+        }
+    }
+    &:hover {
+        color: $blue;
+        &:after {
+            // background-image: url(../images/svg/Arrow/downarrowblue.svg);
+        }
     }
 }
 
 .socialicon_wrapper {
     display: flex;
+
+    @media only screen and (max-width: 991px) {
+        margin-top: 15px;
+        position: absolute;
+        bottom: 10px;
+    }
 }
 
 
@@ -100,7 +137,7 @@ ul {
     margin-right: 8px;
     padding-top: 15px;
 
-   @media only screen and (max-width: 991px){
+    @media only screen and (max-width: 991px) {
         margin-right: 5px;
         padding-top: 5px;
     }
