--- a/src/components/additionals.css
+++ b/src/components/additionals.css
@@ -5,17 +5,23 @@
 .enterprise_blockWrapper li {
   background-image: url(./images/svg/whitetick.svg);
 }
-.webinar_resourceBlock{
-  background:url(./images/FeaturedWebinar-bg.png);
-  background-position: right ;
+
+.webinar_resourceBlock {
+  background: url(./images/FeaturedWebinar-bg.png);
+  background-position: right;
   background-repeat: no-repeat;
 }
+
 .testimonialWrapper {
   background-image: url(./images/svg/testimonial-icon.svg);
 }
 
 @media only screen and (max-width: 991px) {
   
+  .nav-link:hover:after {
+    background-image: url(./images/svg/Arrow/downarrowblue.svg);
+  }
+
   .nav-link:after {
     background-image: url(./images/svg/Arrow/downarrowblack.svg);
     position: absolute;
@@ -37,4 +43,27 @@
     transform: rotate(180deg);
   }
 
+  }
+
+@media only screen and (max-width: 991px) {
+  .footer_linksheading:after {
+    background-image: url(./images/svg/Arrow/downarrowblue.svg);
+  }
+
+  .footer_linksheading:after {
+    background-image: url(./images/svg/Arrow/downarrowblack.svg);
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 8px;
+    content: '';
+    width: 14px;
+    height: 10px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    transition: all 0.25s;
+  }
 }
