--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -2,6 +2,7 @@
     .dropdown-menu {
         @media only screen and (max-width: 991px) {
             display: none;
+            margin: 10px 0px;
 
             &.active {
                 display: block;
